--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,10 @@ img {
     height: 100%;
     width: auto;
     float:right;
+
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(50%);
+  
 }
 
 a {
